More decomp assert removal
ghstack-source-id: b197cc8ac3d763ac304817c8f4ae2a26099bb460
Pull-Request: https://github.com/pytorch/pytorch/pull/170080

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -347,7 +347,7 @@ keep-runtime-typing = true
 "torchgen/**" = [
     "S101"
 ]
-"torch/_decomp/**" = ["S101"]
+"torch/_decomp/decompositions.py" = ["S101"]
 "torch/_dynamo/**" = ["S101"]
 "torch/_export/**" = ["S101"]
 "torch/_functorch/**" = ["S101"]
