--- a/.github/pytorch-probot.yml
+++ b/.github/pytorch-probot.yml
@@ -16,6 +16,7 @@ ciflow_push_tags:
 - ciflow/inductor-cu126
 - ciflow/inductor-micro-benchmark
 - ciflow/inductor-micro-benchmark-cpu-x86
+- ciflow/inductor-pallas
 - ciflow/inductor-perf-compare
 - ciflow/inductor-perf-test-nightly-rocm-mi300
 - ciflow/inductor-perf-test-nightly-rocm-mi355
